--- a/templates/openstackcluster.yaml
+++ b/templates/openstackcluster.yaml
@@ -16,8 +16,10 @@ spec:
   {{- end }}
   {{- if .Values.networkMTU }}
   networkMTU: {{ .Values.networkMTU }}
-  {{- end }}  
-  {{- if .Values.externalNetwork }}
+  {{- end }}
+  {{- if .Values.disableExternalNetwork }}
+  disableExternalNetwork: true
+  {{- else if .Values.externalNetwork }}
   externalNetwork:
     {{- toYaml .Values.externalNetwork | nindent 4 }}
   {{- end }}
@@ -32,4 +34,16 @@ spec:
   {{- if .Values.managedSubnets }}
   managedSubnets:
     {{- toYaml .Values.managedSubnets | nindent 4 }}
+  {{- end }}
+  {{- if .Values.network }}
+  network:
+    {{- toYaml .Values.network | nindent 4 }}
+  {{- end }}
+  {{- if .Values.subnets }}
+  subnets:
+    {{- toYaml .Values.subnets | nindent 4 }}
+  {{- end }}
+  {{- if .Values.controlPlaneAvailabilityZones }}
+  controlPlaneAvailabilityZones:
+    {{- toYaml .Values.controlPlaneAvailabilityZones | nindent 4 }}
   {{- end }}
