Include cluster name in CCM config to avoid naming conflicts

--- a/templates/k0scontrolplane.yaml
+++ b/templates/k0scontrolplane.yaml
@@ -63,6 +63,8 @@ spec:
                 order: 1
                 namespace: kube-system
                 values: |
+                  cluster:
+                    name: {{ include "cluster.name" . }}
                   secret:
                     enabled: true
                     name: openstack-cloud-config
