Update k0s version, add gpu taints, ImageVolume feature gate

--- a/templates/gpu-resources.yaml
+++ b/templates/gpu-resources.yaml
@@ -1,7 +1,6 @@
 {{- range $gpuType, $gpuConfig := .Values.gpuTypes }}
 {{- if gt ($gpuConfig.replicas | int) 0 }}
 {{- $gpuTypeConfig := index $.Values.gpu.types $gpuType }}
-{{- if $gpuTypeConfig.customUserDataRef }}
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: K0sWorkerConfigTemplate
@@ -14,7 +13,14 @@ spec:
       - --enable-cloud-provider
       - --kubelet-extra-args="--cloud-provider=external"
       - --cri-socket=remote:/var/run/crio/crio.sock
+      - --taints=node-role.kubernetes.io/gpu=:NoSchedule
+      {{- if $gpuConfig.taints }}
+      {{- range $gpuConfig.taints }}
+      - --taints={{ .key }}={{ .value | default "" }}:{{ .effect }}
+      {{- end }}
+      {{- end }}
       version: {{ $.Values.k0s.version }}
+      {{- if $gpuTypeConfig.customUserDataRef }}
       customUserDataRef:
         {{- if $gpuTypeConfig.customUserDataRef.secretRef }}
         secretRef:
@@ -29,7 +35,7 @@ spec:
           namespace: {{ $gpuTypeConfig.customUserDataRef.configMapRef.namespace }}
           {{- end }}
         {{- end }}
-{{- end }}
+      {{- end }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: OpenStackMachineTemplate
@@ -97,19 +103,11 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      taints:
-        - effect: NoSchedule
-          key: node-role.kubernetes.io/gpu
       bootstrap:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: K0sWorkerConfigTemplate
-          {{- $gpuTypeConfig := index $.Values.gpu.types $gpuType }}
-          {{- if $gpuTypeConfig.customUserDataRef }}
           name: {{ include "cluster.name" $ }}-{{ $gpuType }}-machine-config
-          {{- else }}
-          name: {{ include "k0sworkerconfigtemplate.name" $ }}
-          {{- end }}
       clusterName: {{ include "cluster.name" $ }}
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
